# Sahar-claude-code-marketplace

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SDLC.md
.claude-plugin/: marketplace.json
plugins/candlekeep/: README.md
plugins/candlekeep/.claude-plugin/: plugin.json
plugins/candlekeep/skills/candlekeep/: README.md  SKILL.md  alembic.ini  pyproject.toml
plugins/candlekeep/skills/candlekeep/alembic/: env.py
plugins/candlekeep/skills/candlekeep/alembic/versions/: 350115ea15b8_add_table_of_contents_field.py  e5ffbf97468e_initial_schema.py
plugins/candlekeep/skills/candlekeep/src/candlekeep/: cli.py
plugins/candlekeep/skills/candlekeep/src/candlekeep/commands/: add.py  init.py  query.py
plugins/candlekeep/skills/candlekeep/src/candlekeep/db/: models.py  session.py
plugins/candlekeep/skills/candlekeep/src/candlekeep/parsers/: markdown.py  pdf.py
plugins/candlekeep/skills/candlekeep/src/candlekeep/utils/: config.py  content_utils.py  file_utils.py  hash_utils.py
plugins/content-studio/: README.md
plugins/dnd-dm/: README.md
plugins/dnd-dm/.claude-plugin/: plugin.json
plugins/dnd-dm/commands/: dm-prepare.md  dm-start-campaign.md  dm-wrap-up.md
plugins/dnd-dm/templates/: session-notes.md
plugins/e2e-tester/: README.md
plugins/e2e-tester/.claude-plugin/: plugin.json
plugins/e2e-tester/hooks/: hooks.json  on-task-complete.sh
plugins/linear-extended/: README.md
plugins/plan-collab/: README.md
plugins/pr/: README.md
plugins/sdlc/: README.md
schema/: marketplace-schema.json
scripts/: add-plugin.sh  validate.sh
(+133 files in other folders)
