[project]
name = "candlekeep"
version = "0.1.0"
description = "A personal library that brings the wisdom of books to your AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pymupdf>=1.23.0",
    "pymupdf4llm>=0.0.6",
    "python-frontmatter>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
candlekeep = "candlekeep.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/candlekeep"]
